--- a/package.json
+++ b/package.json
@@ -101,9 +101,9 @@
     "immutable": "^3.7.3",
     "jsonp": "^0.2.0",
     "password-sheriff": "^1.1.0",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-addons-css-transition-group": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
+    "preact": "^6.0.0",
+    "preact-compat": "^3.0.0",
+    "preact-css-transition-group": "^1.1.0",
     "superagent": "^3.3.1",
     "trim": "0.0.1",
     "url-join": "^1.1.0"
